@@ -48,6 +48,10 @@ import Foundation
         return postSubscription?.sendPosts ?? false
     }
 
+    var canManageNotifications: Bool {
+        !isExternal
+    }
+
     /// Creates a new ReaderTagTopic object from a RemoteReaderInterest
     convenience init(remoteInfo: RemoteReaderSiteInfo, context: NSManagedObjectContext) {
         self.init(context: context)
