@@ -39,8 +39,8 @@ struct ReaderSubscriptionCell: View {
             Spacer()
 
             HStack(spacing: 0) {
-                if let status = ReaderSubscriptionNotificationsStatus(site: site) {
-                    makeButtonNotificationSettings(with: status)
+                if site.canManageNotifications {
+                    ReaderSubscriptionNotificationSettingsButton(site: site)
                 }
                 buttonMore
             }
@@ -51,36 +51,6 @@ struct ReaderSubscriptionCell: View {
         }, preview: {
             ReaderTopicPreviewView(topic: site)
         })
-    }
-
-    private func makeButtonNotificationSettings(with status: ReaderSubscriptionNotificationsStatus) -> some View {
-        Button {
-            isShowingSettings = true
-        } label: {
-            Group {
-                switch status {
-                case .all:
-                    Image(systemName: "bell.and.waves.left.and.right")
-                        .foregroundStyle(AppColor.primary)
-                case .personalized:
-                    Image(systemName: "bell")
-                        .foregroundStyle(AppColor.primary)
-                case .none:
-                    Image(systemName: "bell.slash")
-                        .foregroundStyle(.secondary)
-                        .opacity(0.6)
-                }
-            }
-            .font(.subheadline)
-            .frame(width: 34, alignment: .center)
-            .contentShape(Rectangle())
-        }
-        .buttonStyle(.plain)
-        .sheet(isPresented: $isShowingSettings) {
-            ReaderSubscriptionNotificationSettingsView(siteID: site.siteID.intValue)
-                .presentationDetents([.medium, .large])
-                .edgesIgnoringSafeArea(.bottom)
-        }
     }
 
     private var buttonMore: some View {
